objects/ASI_CRM_KR_TempListedMenuPrice__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_KR_AccountOwnerChecking__c</fullName>
        <formula>$User.Id  = ASI_CRM_KR_Venue__r.Owner.Id</formula>
        <label>AccountOwnerChecking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
                <value>
                    <fullName>FY2021</fullName>
                </value>
                <value>
                    <fullName>FY2122</fullName>
                </value>
                <value>
                    <fullName>FY2223</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Item_Group_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Item Group Code Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>ASI_KOR_Item_Group__c.ASI_CRM_KR_Priority_Item__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_KOR_Item_Group__c</referenceTo>
        <relationshipLabel>Temp Listed Menu Prices</relationshipLabel>
        <relationshipName>Temp_Listed_Menu_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Listed_Price__c</fullName>
        <label>Listed Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Venue__c</fullName>
        <label>Venue</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Venue does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Venue</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Temp Listed Menu Prices</relationshipLabel>
        <relationshipName>Temp_Listed_Menu_Prices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Temp Listed Menu Price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_KR_Fiscal_Year__c</columns>
        <columns>ASI_CRM_KR_Quarter__c</columns>
        <columns>ASI_CRM_KR_Venue__c</columns>
        <columns>ASI_CRM_KR_Item_Group_Code__c</columns>
        <columns>ASI_CRM_KR_Listed_Price__c</columns>
        <columns>ASI_CRM_KR_Unique_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Temp Listed Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Listed Menu Prices</pluralLabel>
    <recordTypes>
        <fullName>ASI_KR_CRM_Temp_Price</fullName>
        <active>true</active>
        <label>ASI KR CRM Temp Price</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>